<resources>
    <string name="app_name">Dropo User</string>
    <string name="text_empty_string">--</string>
    <string name="text_description">Description</string>
    <string name="text_login">Sign In</string>
    <string name="text_register">Sign Up</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_email_or_phone">Email Or Phone</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_password">Password</string>
    <string name="text_address">Address</string>
    <string name="text_zip_code">Zip Code</string>
    <string name="text_mobile_no">Mobile No.</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_select_country">Select Country</string>
    <string name="text_select_city">City</string>
    <string name="text_select_language">Select Language</string>
    <string name="text_set_profile_photos">Choose Photo</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_home">Home</string>
    <string name="text_basket">Cart</string>
    <string name="text_orders">Orders</string>
    <string name="text_enter_delivery_address">Enter Delivery Address</string>
    <string name="text_enter_store_name">Enter Name</string>
    <string name="text_enter_Item_name">Enter Item Name</string>
    <string name="text_when">When</string>
    <string name="text_asap">As Soon As Possible</string>
    <string name="text_schedule_an_order">Schedule an Order</string>
    <string name="text_schedule_a_date">Date</string>
    <string name="text_set_time">Time</string>
    <string name="text_done">Done</string>
    <string name="text_delivery_location">Delivery Location</string>
    <string name="text_profile">Profile</string>
    <string name="text_payments">Payments</string>
    <string name="text_settings">Settings</string>
    <string name="text_share">Share</string>
    <string name="text_share_with_friend">Share with friends</string>
    <string name="text_documents">Documents</string>
    <string name="text_log_out">Logout</string>
    <string name="text_user">Account</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_select_payment_method">Select Payment Method</string>
    <string name="text_add">Add</string>
    <string name="text_current_balance">Current Balance</string>
    <string name="text_app_version">App Version</string>
    <string name="text_app_closed">Closed</string>
    <string name="text_reopen_at">Will open at</string>
    <string name="text_ASAP">ASAP</string>
    <string name="text_internet">Internet</string>
    <string name="text_re_try">RETRY</string>
    <string name="text_i_am_sure">I\'M SURE</string>
    <string name="text_attention">Attention</string>
    <string name="text_verify_account">Verify Account</string>
    <string name="text_confirm_detail">Confirm Details</string>
    <string name="text_verify_detail">Verify Details</string>
    <string name="text_email_otp">Email OTP</string>
    <string name="text_phone_otp">Phone OTP</string>
    <string name="text_pass_new">New Password</string>
    <string name="text_pass_confirm">Confirm Password</string>
    <string name="text_pass_retype">Confirm New Password</string>
    <string name="text_change_password">Change Password?</string>
    <string name="text_price">Price</string>
    <string name="text_delivery_time">Delivery Time (min)</string>
    <string name="text_apply">Apply</string>
    <string name="text_reset">Reset</string>
    <string name="text_plus" translatable="false">+</string>
    <string name="text_minus" translatable="false">-</string>
    <string name="text_add_to_cart">Add To Cart</string>
    <string name="text_remove">Remove</string>
    <string name="text_total">Total</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_order_details">Order Details</string>
    <string name="text_delivery_details">Delivery Details</string>
    <string name="text_delivery_address">Delivery Address</string>
    <string name="text_delivery_note">Add Delivery Note</string>
    <string name="text_note">Note</string>
    <string name="text_place_order">Place Order</string>
    <string name="text_item_price">Item Price</string>
    <string name="text_base_price">Base Price</string>
    <string name="text_distance_price">Distance Price</string>
    <string name="text_time_price">Time Price</string>
    <string name="text_service_tax">Service Tax</string>
    <string name="text_tax">Tax</string>
    <string name="text_surge_price">Surge Price</string>
    <string name="text_total_item_cost">Total Item Price</string>
    <string name="text_total_service_cost">Total Service Price</string>
    <string name="text_submit">Submit</string>
    <string name="text_add_new_card">+  Add New Card</string>
    <string name="text_add_card">Add Card</string>
    <string name="text_credit_card_number">Credit card number</string>
    <string name="text_mm">mm</string>
    <string name="text_yy">yy</string>
    <string name="text_cvc">CVV</string>
    <string name="text_pay_now">Pay Now</string>
    <string name="text_delete_card">Delete Card</string>
    <string name="text_cash">Cash</string>
    <string name="text_current_orders">Current Orders</string>
    <string name="text_order_history">Order History</string>
    <string name="text_order_accepted">Order accepted</string>
    <string name="text_order_prepared">Order Prepared</string>
    <string name="text_order_on_the_way">Order on the Way</string>
    <string name="text_order_on_doorstep">Order Received</string>
    <string name="text_order_number">Order No.</string>
    <string name="text_est_delivery_time">Estimated Delivery Time</string>
    <string name="text_confirmation_code">Confirmation Code</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="text_others">Others</string>
    <string name="text_id_number">ID Number :</string>
    <string name="text_expire_date">Exp.Date :</string>
    <string name="text_mandatory_document">* - indicates mandatory fields</string>
    <string name="text_select">SELECT</string>
    <string name="text_document_id">Document ID</string>
    <string name="text_document_expire_date">Document Expiry Date</string>
    <string name="text_alert">Alert</string>
    <string name="text_comment">Comment</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_today">Today</string>
    <string name="text_qty">Quantity</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_card">Card</string>
    <string name="text_time">Time(h:m)</string>
    <string name="text_distance">Distance</string>
    <string name="text_payment">Pay</string>
    <string name="text_est_time">Estimated Arrival Time</string>
    <string name="text_exit">Exit</string>
    <string name="text_select_from_date">Select From Date</string>
    <string name="text_select_to_date">Select To Date</string>
    <string name="text_update">Update</string>
    <string name="text_update_app">Update App</string>
    <string name="text_later">Later</string>
    <string name="text_referral">Referral</string>
    <string name="text_referral_code">Enter referral code</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_drop_location">Delivery Location</string>
    <string name="text_provider_location">Delivery man’s Location</string>
    <string name="text_less_20">&lt;20</string>
    <string name="text_less_60">&lt;60</string>
    <string name="text_less_120">&lt;120</string>
    <string name="text_less_5">&lt;5</string>
    <string name="text_less_15">&lt;15</string>
    <string name="text_less_25">&lt;25</string>
    <string name="text_no_item">No Item</string>
    <string name="text_or">or</string>
    <string name="text_digits">Digits.</string>
    <string name="text_items">Item</string>
    <string name="text_promo_code">Promo Code</string>
    <string name="text_promo">Promo</string>
    <string name="text_add_wallet_amount">Add Wallet Amount</string>
    <string name="text_wallet_use">Use Wallet</string>
    <string name="text_is_required">Required</string>
    <string name="text_set_document_photos">Set document photos</string>
    <string name="text_language">Language</string>
    <string name="text_number">Number</string>
    <string name="text_code">Code</string>
    <string name="text_push_notification">Push Notification</string>
    <string name="text_push_notification_description">Play sound when you receive a push notification.</string>
    <string name="text_give_rate">Give Rate</string>
    <string name="text_choose_map">Choose Map</string>
    <string name="text_google_map">Google Map</string>
    <string name="text_waze_map">Waze Map</string>
    <string name="text_refund">Refund:</string>
    <string name="text_Referral">Referral</string>
    <string name="text_or_desh">-OR-</string>
    <string name="text_get_code">Get Code</string>
    <string name="text_wallet_status_added_by_admin">Added By Admin</string>
    <string name="text_wallet_status_added_by_card">Added By Card</string>
    <string name="text_wallet_status_added_by_referral">Added By Referral</string>
    <string name="text_wallet_status_order_charged">Order Charge</string>
    <string name="text_wallet_status_order_refund">Order Refund</string>
    <string name="text_wallet_status_order_profit">Order Profit</string>
    <string name="text_wallet_status_order_cancellation_charge">Order Cancellation Charge</string>
    <string name="text_wallet_status_wallet_request_charge">Wallet Request Charge</string>
    <string name="text_id">ID</string>
    <string name="text_total_wallet_amount">Total Wallet Amount</string>
    <string name="text_added_amount">Added Amount</string>
    <string name="text_wallet_history">Wallet History</string>
    <string name="text_favourite">Favourite Stores</string>
    <string name="text_delete">Delete</string>
    <string name="text_open">Open</string>
    <string name="text_view_detail">View Details</string>
    <string name="text_count_down_your_parcel">Track Provider</string>
    <string name="text_i_will_pickup_a_delivery">I will pick up the delivery</string>
    <string name="text_max">Max:</string>
    <string name="text_thank_you">Thank You</string>
    <string name="text_track_your_order">Track Your Order</string>
    <string name="text_order_placed">Order Placed</string>
    <string name="text_delivery_distance">Distance</string>
    <string name="text_over_view">Overview</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="msg_enter_your_new_password_to_login_back_to_app">Enter your new password to login back into app</string>
    <string name="text_use_app_in">Use App in</string>
    <string name="text_register_now">Sign Up Now</string>
    <string name="text_don_t_have_your_account">Don\'t have your account?</string>
    <string name="msg_no_table_available_for_people">No table available for above number peoples</string>
    <string name="btn_reserve_a_table">Reserve a Table</string>
    <string name="text_book_my_order_now">Book my order now</string>
    <string name="text_book_at_restaurant">Book at restaurant</string>
    <string name="text_would_you_like_order_now">Would you like order now?</string>
    <string name="text_select_table">Select table</string>
    <string name="text_no_of_people">No of people</string>
    <string name="text_table_reservation">Table Reservation</string>
</resources>