<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/bottom_sheet_dialog_padding_20dp"
    android:paddingTop="@dimen/bottom_sheet_dialog_padding_30dp"
    android:paddingEnd="@dimen/bottom_sheet_dialog_padding_20dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.dropo.component.CustomFontTextViewTitle
            android:id="@+id/tvDialogAlertTitle"
            style="?appThemeTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:text="@string/text_reset_password"
            android:textSize="@dimen/size_app_text_large" />

        <com.dropo.component.CustomImageView
            android:id="@+id/btnDialogAlertLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_app_edit_text_padding"
            android:paddingTop="@dimen/dimen_app_edit_text_padding"
            android:paddingBottom="@dimen/dimen_app_edit_text_padding"
            android:src="@drawable/ic_cross" />
    </LinearLayout>

    <com.dropo.component.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_enter_your_new_password_to_login_back_to_app"
        android:textSize="@dimen/size_app_label_regular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogItlOne"
        style="?appThemeTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/text_pass_new"
        android:visibility="visible">

        <com.dropo.component.CustomFontEditTextView
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:minLines="1"
            android:textAlignment="viewStart"
            android:textColor="?colorAccent"
            android:theme="?appThemeEditTextStyle"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogItlTwo"
        style="?appThemeTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/text_pass_confirm">

        <com.dropo.component.CustomFontEditTextView
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:minLines="1"
            android:textAlignment="viewStart"
            android:textColor="?colorAccent"
            android:theme="?appThemeEditTextStyle"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.dropo.component.CustomFontButton
        android:id="@+id/btnDialogAlertRight"
        style="?appThemeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_reset" />
</LinearLayout>